<resources>
    <string name="app_name">PizzaOn</string>


    <string name="string_foodName">NAME</string>
    <string name="string_foodPrice">PRICE</string>
    <string name="string_rupeeSymbol">₹</string>
    <string name="string_foodQuantity">QUANTITY</string>
    <string name="string_foodQuantityMarker">Qty : </string>
    <string name="string_defaultQuantity">1</string>
    <string name="string_foodDescription">DESCRIPTION</string>
    <string name="string_orderID">ORDER ID</string>
    <string name="string_orderIDMarker">OrderID : </string>


    <string name="string_nameHint">Name</string>
    <string name="string_numberHint">Mobile Number</string>
    <string name="string_orderSelected">Add To My Order</string>
    <string name="string_updateSelected">Update Order</string>


    <string name="string_menuItemTitle">My Order</string>


</resources>