<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="11dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="10dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorTranslucentMain">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:id="@+id/image_eachOrder"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_name_eachOrder"
                    android:text="@string/string_foodName"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorLightTurquoise"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_rupeeSymbol"
                        android:textStyle="bold"
                        android:textColor="@color/colorPaleRed"
                        android:layout_marginLeft="10dp"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_price_eachOrder"
                        android:text="@string/string_foodPrice"
                        android:textStyle="bold"
                        android:textColor="@color/colorPaleRed"
                        android:layout_marginLeft="5dp"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_foodQuantityMarker"
                        android:textColor="@color/colorGrey"
                        android:layout_marginLeft="10dp"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_quantity_eachOrder"
                        android:text="@string/string_foodQuantity"
                        android:textStyle="bold"
                        android:textColor="@color/colorGrey"
                        android:layout_marginLeft="5dp"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_orderIDMarker"
                        android:textColor="@color/colorBrown"
                        android:layout_marginLeft="10dp"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_orderID_eachOrder"
                        android:text="@string/string_orderID"
                        android:textColor="@color/colorBrown"
                        android:layout_marginLeft="10dp"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>