<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailActivity"
    android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:id="@+id/image_selectedItemDetail"
                android:src="@drawable/homemade_pizza"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_name_selectedItemDetail"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                android:text="@string/string_foodName"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/colorPaleRed"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:background="@color/colorTranslucentBlue"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/image_subtractQuantity"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/image_text_remove_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/text_quantity_selectedItemDetail"
                    android:text="@string/string_defaultQuantity"
                    android:layout_marginTop="3sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBrown"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:id="@+id/image_addQuantity"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/image_text_add_one" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_description_selectedItemDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/string_foodDescription"
            android:textColor="@color/colorBrown"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/text_userName_selectedItemDetail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_order_layout"
            app:backgroundTint="@color/colorMainLight"
            android:ems="10"
            android:hint="@string/string_nameHint"
            android:paddingLeft="20sp"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/text_userPhoneNumber_selectedItemDetail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_order_layout"
            app:backgroundTint="@color/colorMainLight"
            android:ems="10"
            android:hint="@string/string_numberHint"
            android:inputType="phone"
            android:paddingLeft="20sp"
            android:textColorHint="@color/colorGrey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/string_foodPrice"
            android:textColor="@color/colorBrown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_rupeeSymbol"
                android:textColor="@color/colorHighlightGreen"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_price_selectedItemDetail"
                android:text="@string/string_foodPrice"
                android:textColor="@color/colorHighlightGreen"
                android:layout_marginLeft="5dp"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button_order_selectedItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_order_layout"
            app:backgroundTint="@color/colorMainDark"
            android:text="@string/string_orderSelected"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>