<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="12dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="12dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:id="@+id/image_eachItem"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_name_eachItem"
                    android:text="@string/string_foodName"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@color/colorPaleRed"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_rupeeSymbol"
                        android:textStyle="bold"
                        android:textColor="@color/colorHighlightGreen"
                        android:layout_marginLeft="10dp"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_price_eachItem"
                        android:text="@string/string_foodPrice"
                        android:textStyle="bold"
                        android:textColor="@color/colorHighlightGreen"
                        android:layout_marginLeft="5dp"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_description_eachItem"
                    android:text="@string/string_foodDescription"
                    android:textColor="@color/colorGrey"
                    android:layout_marginLeft="10dp"
                    android:textSize="10sp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>